# ethernaut

./: .gitignore  README.md  foundry.toml  package.json
client/: package.json
solve/: Cargo.toml  foundry.toml  package-lock.json  package.json  tsconfig.json
solve/src/: main.rs
solve/src/contracts/: CoinFlipHack.sol  TelephoneHack.sol
solve/src/solutions/: coin_flip.rs  delegation.rs  fallback.rs  fallout.rs  mod.rs  telephone.rs  vault.rs
